--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,6 @@
-# Hi, I'm Jane Doe
+# Hello There!
+---
+## I'm Rohit,
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+
+Trying to find the perfect balance between fun and coding.
