--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -15,7 +15,7 @@ A first of it's kind open source club in MPSTME that worked towards improving st
 An Android app for ACM MPSTME to centralize all communications making it easy
 </ProjectCard>
 
-<ProjectCard title="Connect" link="https://mpstme.acm.org" bg="#1F1A24">
+<ProjectCard title="ACM MPSTME" link="https://mpstme.acm.org" bg="#1F1A24">
   The official website for ACM MPSTME - Built using WebSlides
 </ProjectCard>
 
