--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,2 +1,3 @@
 ## Find Me
-_[gmail](mailto:rohitc.ufl@gmail.com) [twitter](https://twitter.com/InfernapeXavier) [linkedin](https://linkedin.com/in/InfernapeXavier) [github](https://github.com/InfernapeXavier) [steam](https://steamcommunity.com/id/KidInX) [resume](https://drive.google.com/file/d/1V44xBaMVwtiiwus-zMl5DL7vjSwpKzxY/view?usp=drivesdk)_
+_[gmail](mailto:rohitc.ufl@gmail.com) [twitter](https://twitter.com/InfernapeXavier) [linkedin](https://linkedin.com/in/InfernapeXavier) [github](https://github.com/InfernapeXavier) [steam](https://steamcommunity.com/id/KidInX)_
+_[resume](http://bit.ly/rohitcresume) [cover letter](http://bit.ly/rohitccover)_
